# env-checker

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/: WORKFLOWS.md
.github/workflows/: ci.yml  release.yml
extension/: Cargo.toml  QUICKSTART.md  README.md  STRUCTURE.md  extension.toml  extension.wasm
extension/example-project/: .envchecker.json  README.md  env.schema.yml
extension/example-project/src/: schema.ts
extension/languages/env/: brackets.scm  config.toml  highlights.scm  indents.scm  outline.scm
extension/src/: lib.rs
lsp/: Cargo.toml  README.md
lsp/src/: code_actions.rs  config.rs  diagnostics.rs  env_file.rs  hover.rs  main.rs  types.rs  validation.rs
lsp/src/schema/: mod.rs  pydantic.rs  yaml.rs  zod.rs
scripts/: build-all.sh  build-extension.sh  build-lsp-all.sh
