[package]
name = "env-checker-lsp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"
serde_yaml = "0.9"
tokio = { version = "1.35", features = ["full"] }
tower-lsp = "0.20"
glob = "0.3"
walkdir = "2.4"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"

[[bin]]
name = "env-checker-lsp"
path = "src/main.rs"
